[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Oxanium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "0"
percent_visible = -1.0

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.701
margin_top = -109.112
margin_right = 187.299
margin_bottom = 91.8879
custom_fonts/font = SubResource( 2 )
text = "DOGDE 
THE CREEPS!
"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -103.0
margin_top = -71.0
margin_right = 103.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "START"

[node name="MesaggeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MesaggeTimer" to="." method="_on_MesaggeTimer_timeout"]
